add pre processing notebook

--- a/util/convert.ipynb
+++ b/util/convert.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,16 +20,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 82,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['iso_code', 'continent', 'location', 'date', 'total_cases', 'new_cases',\n",
+       "       'new_cases_smoothed', 'total_deaths', 'new_deaths',\n",
+       "       'new_deaths_smoothed', 'total_cases_per_million',\n",
+       "       'new_cases_per_million', 'new_cases_smoothed_per_million',\n",
+       "       'total_deaths_per_million', 'new_deaths_per_million',\n",
+       "       'new_deaths_smoothed_per_million', 'reproduction_rate', 'icu_patients',\n",
+       "       'icu_patients_per_million', 'hosp_patients',\n",
+       "       'hosp_patients_per_million', 'weekly_icu_admissions',\n",
+       "       'weekly_icu_admissions_per_million', 'weekly_hosp_admissions',\n",
+       "       'weekly_hosp_admissions_per_million', 'total_tests', 'new_tests',\n",
+       "       'total_tests_per_thousand', 'new_tests_per_thousand',\n",
+       "       'new_tests_smoothed', 'new_tests_smoothed_per_thousand',\n",
+       "       'positive_rate', 'tests_per_case', 'tests_units', 'total_vaccinations',\n",
+       "       'people_vaccinated', 'people_fully_vaccinated', 'total_boosters',\n",
+       "       'new_vaccinations', 'new_vaccinations_smoothed',\n",
+       "       'total_vaccinations_per_hundred', 'people_vaccinated_per_hundred',\n",
+       "       'people_fully_vaccinated_per_hundred', 'total_boosters_per_hundred',\n",
+       "       'new_vaccinations_smoothed_per_million',\n",
+       "       'new_people_vaccinated_smoothed',\n",
+       "       'new_people_vaccinated_smoothed_per_hundred', 'stringency_index',\n",
+       "       'population_density', 'median_age', 'aged_65_older', 'aged_70_older',\n",
+       "       'gdp_per_capita', 'extreme_poverty', 'cardiovasc_death_rate',\n",
+       "       'diabetes_prevalence', 'female_smokers', 'male_smokers',\n",
+       "       'handwashing_facilities', 'hospital_beds_per_thousand',\n",
+       "       'life_expectancy', 'human_development_index', 'population',\n",
+       "       'excess_mortality_cumulative_absolute', 'excess_mortality_cumulative',\n",
+       "       'excess_mortality', 'excess_mortality_cumulative_per_million'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "data = data [['iso_code', 'date', 'new_cases']]"
+    "data.columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = data [['iso_code', 'date', 'new_cases', 'total_cases', 'new_deaths', 'total_deaths', 'new_tests', 'total_tests']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,20 +85,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json"
+    "# get the 7 days moving average of new cases per country\n",
+    "data['7WMA'] = data.groupby('iso_code')['new_cases'].rolling(7).mean().reset_index(0,drop=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data.to_json('data.json', orient='records')"
+    "data = data[data['date']>='2020-01-03']\n",
+    "data = data[data['date']<='2023-04-16']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# replace NaN with 0\n",
+    "data = data.fillna(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "\n",
+    "data.to_json('../data/data.json', orient='records')"
    ]
   }
  ],
