add 7 days moving average

--- a/util/convert.ipynb
+++ b/util/convert.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,17 +85,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "# get the 7 days moving average of new cases per country\n",
-    "data['7WMA'] = data.groupby('iso_code')['new_cases'].rolling(7).mean().reset_index(0,drop=True)"
+    "data['7DMA'] = data.groupby('iso_code')['new_cases'].rolling(7).mean().reset_index(0,drop=True)\n",
+    "data['7DMA'] = data['7DMA'].round(2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,13 +116,227 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
     "\n",
     "data.to_json('../data/data.json', orient='records')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>iso_code</th>\n",
+       "      <th>date</th>\n",
+       "      <th>new_cases</th>\n",
+       "      <th>total_cases</th>\n",
+       "      <th>new_deaths</th>\n",
+       "      <th>total_deaths</th>\n",
+       "      <th>new_tests</th>\n",
+       "      <th>total_tests</th>\n",
+       "      <th>7DMA</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>36103</th>\n",
+       "      <td>BRA</td>\n",
+       "      <td>2020-01-03</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36104</th>\n",
+       "      <td>BRA</td>\n",
+       "      <td>2020-01-04</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36105</th>\n",
+       "      <td>BRA</td>\n",
+       "      <td>2020-01-05</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36106</th>\n",
+       "      <td>BRA</td>\n",
+       "      <td>2020-01-06</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36107</th>\n",
+       "      <td>BRA</td>\n",
+       "      <td>2020-01-07</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37298</th>\n",
+       "      <td>BRA</td>\n",
+       "      <td>2023-04-12</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>37319254.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>700556.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>8655.857143</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37299</th>\n",
+       "      <td>BRA</td>\n",
+       "      <td>2023-04-13</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>37319254.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>700556.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>8655.857143</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37300</th>\n",
+       "      <td>BRA</td>\n",
+       "      <td>2023-04-14</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>37319254.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>700556.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>8655.857143</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37301</th>\n",
+       "      <td>BRA</td>\n",
+       "      <td>2023-04-15</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>37319254.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>700556.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>8655.857143</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37302</th>\n",
+       "      <td>BRA</td>\n",
+       "      <td>2023-04-16</td>\n",
+       "      <td>38838.0</td>\n",
+       "      <td>37358092.0</td>\n",
+       "      <td>255.0</td>\n",
+       "      <td>700811.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>5548.285714</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1200 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      iso_code        date  new_cases  total_cases  new_deaths  total_deaths  \\\n",
+       "36103      BRA  2020-01-03        0.0          0.0         0.0           0.0   \n",
+       "36104      BRA  2020-01-04        0.0          0.0         0.0           0.0   \n",
+       "36105      BRA  2020-01-05        0.0          0.0         0.0           0.0   \n",
+       "36106      BRA  2020-01-06        0.0          0.0         0.0           0.0   \n",
+       "36107      BRA  2020-01-07        0.0          0.0         0.0           0.0   \n",
+       "...        ...         ...        ...          ...         ...           ...   \n",
+       "37298      BRA  2023-04-12        0.0   37319254.0         0.0      700556.0   \n",
+       "37299      BRA  2023-04-13        0.0   37319254.0         0.0      700556.0   \n",
+       "37300      BRA  2023-04-14        0.0   37319254.0         0.0      700556.0   \n",
+       "37301      BRA  2023-04-15        0.0   37319254.0         0.0      700556.0   \n",
+       "37302      BRA  2023-04-16    38838.0   37358092.0       255.0      700811.0   \n",
+       "\n",
+       "       new_tests  total_tests         7DMA  \n",
+       "36103        0.0          0.0     0.000000  \n",
+       "36104        0.0          0.0     0.000000  \n",
+       "36105        0.0          0.0     0.000000  \n",
+       "36106        0.0          0.0     0.000000  \n",
+       "36107        0.0          0.0     0.000000  \n",
+       "...          ...          ...          ...  \n",
+       "37298        0.0          0.0  8655.857143  \n",
+       "37299        0.0          0.0  8655.857143  \n",
+       "37300        0.0          0.0  8655.857143  \n",
+       "37301        0.0          0.0  8655.857143  \n",
+       "37302        0.0          0.0  5548.285714  \n",
+       "\n",
+       "[1200 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[data['iso_code'] == 'BRA']"
    ]
   }
  ],
